# kyrs_4

./: main.py  pyproject.toml
src/: abstarct_vanacy.py  api_abstarct.py  hh_api.py  json_storage.py  vacancy.py
tests/: test_main.py
