[tool.poetry]
name = "kyrs-4"
version = "0.1.0"
description = "Project for course"
authors = ["Qiaxx <belozertsev04@mail.ru>"]
license = "developer"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
requests = "^2.31.0"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
